--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "effect": "^3.12.0",
+    "js-combinatorics": "^2.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
