--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -18,6 +18,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
+    "exactOptionalPropertyTypes": true,
     "noUncheckedSideEffectImports": true
   },
   "include": ["vite.config.ts"]
